# Statement-Categorizer

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: budgets.py  categories.py  statements.py  transactions.py
backend/app/core/: config.py  db.py
backend/app/crud/: __init__.py  categories.py  statements.py  transactions.py
backend/app/models/: __init__.py  category.py  models.py  statement.py  transaction.py
backend/app/schemas/: budget.py  category.py  statement.py  transaction.py
backend/app/services/categorizer/: __init__.py  base.py  claude_categorizer.py  ollama_categorizer.py  rule_engine.py
backend/app/services/parser/: __init__.py  base.py  csv_parser.py  ofx_parser.py  pdf_parser.py
backend/app/services/storage/: __init__.py  base.py  local_storage.py  s3_storage.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css
frontend/src/app/: App.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/features/budgets/api/: index.ts
frontend/src/features/budgets/components/: BudgetPage.tsx
frontend/src/features/budgets/hooks/: useBudget.ts
frontend/src/features/categories/api/: index.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
(+8 files in other folders)
